--- a/src/app/vistas/login/login.component.html
+++ b/src/app/vistas/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+
+      <div class="wrapper fadeInDown" style="margin-top: 100px;">
+        <div id="formContent">
+          <!-- Tabs Titles -->
+      
+          <!-- Icon -->
+          <div class="fadeIn first">
+            <img src="https://w7.pngwing.com/pngs/240/411/png-transparent-logo-nursing-care-international-council-of-nurses-international-nurses-day-doctors-and-nurses-purple-magenta-hospital-thumbnail.png" id="icon" alt="User Icon" />
+          </div>
+      
+          <!-- Login Form -->
+          <form>
+            <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
+            <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+            <input type="submit" class="fadeIn fourth" value="Log In">
+          </form>
+      
+          <!-- Remind Passowrd -->
+          <div id="formFooter">
+            <a class="underlineHover" href="#">Forgot Password?</a>
+          </div>
+      
+        </div>
+      </div>
